<?xml version="1.0"?>
<package>
  <name>knowrob_poller</name>
  <version>0.0.0</version>
  <description>
    Library and node to periodically poll knowrob for facts.
  </description>

  <maintainer email="georg.bartels@cs.uni-bremen.de">Georg Bartels</maintainer>
  <author email="georg.bartels@cs.uni-bremen.de">Georg Bartels</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>json_prolog</build_depend>
  <build_depend>iai_pepper_demo_msgs</build_depend>
  <run_depend>iai_pepper_demo_msgs</run_depend>
  <run_depend>json_prolog</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>


</package>
